--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,20 +2,34 @@
 
 export(DE)
 export(DEgenes)
+export(build_coordinates)
+export(build_graph)
+export(build_knn)
+export(build_tsne)
+export(build_umap)
 export(clean_by_genes)
 export(clean_by_size)
 export(clusta)
+export(cluster_graph)
 export(clusters)
 export(fold_changes)
+export(graph_analysis)
 export(jaccard)
 export(jaccard_filter)
 export(map_combinations)
 export(order_by_significance)
 export(t_tests)
 export(uniquely)
+importFrom(FNN,get.knn)
+importFrom(Rtsne,Rtsne)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,mutate)
+importFrom(igraph,graph_from_data_frame)
+importFrom(igraph,membership)
+importFrom(igraph,multilevel.community)
+importFrom(igraph,simplify)
+importFrom(igraph,walktrap.community)
 importFrom(reshape2,melt)
 importFrom(stats,as.dist)
 importFrom(stats,cor)
@@ -25,3 +39,5 @@ importFrom(stats,hclust)
 importFrom(stats,p.adjust)
 importFrom(stats,setNames)
 importFrom(stats,t.test)
+importFrom(umap,umap)
+importFrom(umap,umap.defaults)
