adding documentation for creorder()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(clean_by_size)
 export(clusta)
 export(cluster_graph)
 export(clusters)
+export(creorder)
 export(fold_changes)
 export(graph_analysis)
 export(jaccard)
