--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,9 @@ Imports:
     Rtsne,
     umap,
     igraph,
-    FNN
+    FNN,
+    mixtools,
+    NMFN
 Suggests: 
     testthat (>= 2.1.0)
 RoxygenNote: 6.1.1
