vignette WIP. adding heatCols to sysdata and adding plotting function and bt771 example data

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,5 +23,8 @@ Imports:
     mixtools,
     NMFN
 Suggests: 
-    testthat (>= 2.1.0)
+    testthat (>= 2.1.0),
+    knitr,
+    rmarkdown
 RoxygenNote: 6.1.1
+VignetteBuilder: knitr
