--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,8 @@ Description: Perform exploratory computational analyses on pre-processed single-
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+Depends:
+    R (>= 2.10)
 Imports: 
     dplyr,
     stats,
@@ -22,7 +24,10 @@ Imports:
     FNN,
     mixtools,
     NMFN,
-    ggplot2
+    ggplot2,
+    rlang,
+    scales,
+    ggpubr
 Suggests: 
     testthat (>= 2.1.0),
     knitr,
