matrixStats and matrixcalc dependencies for is.corr.matrix is.simil.matrix , and for genes_detected, respectively

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,9 @@ Imports:
     ggplot2,
     rlang,
     scales,
-    ggpubr
+    ggpubr,
+    matrixStats,
+    matrixcalc
 Suggests: 
     testthat (>= 2.1.0),
     knitr,
