--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -36,3 +36,5 @@ Suggests:
     rmarkdown
 RoxygenNote: 6.1.1
 VignetteBuilder: knitr
+URL: https://github.com/jlaffy/scrabble
+BugReports: https://github.com/jlaffy/scrabble/issues
