--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,22 +3,24 @@
 export("%->%")
 export("%<-%")
 export("%>%")
-export(HC)
 export(bin)
 export(binmatch)
 export(colCenter)
-export(corder)
+export(comply)
 export(count_detected)
+export(crorder)
 export(dea)
 export(dims)
 export(foldchange)
+export(hca)
 export(hierarchy)
+export(jaccard)
 export(maxcol_strict)
-export(morder)
 export(ncols)
 export(nrows)
 export(plot_hierarchy)
 export(range_rowMeans)
+export(reorder)
 export(rowCenter)
 export(sample_strict)
 export(score)
