--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 export("%->%")
 export("%<-%")
 export("%>%")
+export(annomap)
+export(annomaps)
 export(bin)
 export(binmatch)
 export(colCenter)
@@ -12,6 +14,7 @@ export(crorder)
 export(dea)
 export(dims)
 export(foldchange)
+export(grombine)
 export(hca)
 export(hierarchy)
 export(jaccard)
@@ -29,6 +32,22 @@ export(useData)
 export(wilcoxtest)
 importFrom(dplyr,mutate)
 importFrom(dplyr,transmute)
+importFrom(ggplot2,coord_flip)
+importFrom(ggplot2,element_text)
+importFrom(ggplot2,geom_tile)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggplotGrob)
+importFrom(ggplot2,scale_fill_brewer)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_x_discrete)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,waiver)
+importFrom(ggpubr,get_legend)
+importFrom(ggpubr,rremove)
+importFrom(grid,grid.draw)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,colCounts)
 importFrom(stats,as.dist)
