--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(annomap)
 export(annomaps)
 export(bin)
 export(binmatch)
-export(colCenter)
+export(colcenter)
 export(comply)
 export(count_detected)
 export(crorder)
@@ -22,9 +22,9 @@ export(maxcol_strict)
 export(ncols)
 export(nrows)
 export(plot_hierarchy)
-export(range_rowMeans)
+export(range_rowmeans)
 export(reorder)
-export(rowCenter)
+export(rowcenter)
 export(sample_strict)
 export(score)
 export(ttest)
