changes mainly to dea and hca

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,14 +8,19 @@ export(annomaps)
 export(bin)
 export(binmatch)
 export(colcenter)
+export(coldetected)
 export(comply)
-export(count_detected)
 export(crorder)
 export(dea)
 export(dims)
 export(foldchange)
 export(grombine)
 export(hca)
+export(hca_clusters)
+export(hca_cr)
+export(hca_dst)
+export(hca_hc)
+export(hca_ord)
 export(hierarchy)
 export(jaccard)
 export(maxcol_strict)
@@ -25,6 +30,7 @@ export(plot_hierarchy)
 export(range_rowmeans)
 export(reorder)
 export(rowcenter)
+export(rowdetected)
 export(sample_strict)
 export(score)
 export(ttest)
@@ -50,6 +56,7 @@ importFrom(ggpubr,rremove)
 importFrom(grid,grid.draw)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,colCounts)
+importFrom(matrixStats,rowCounts)
 importFrom(stats,as.dist)
 importFrom(stats,cor)
 importFrom(stats,dist)
